--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script href="script.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Projetos de Clientes</title>
     <style>
